--- a/index.html
+++ b/index.html
@@ -70,7 +70,16 @@
       </div>
     </div>
   </div>
-
+<!-- Divider section -->
+<section class="banner-divider" style="background-color: #FFFFFF;">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <hr style="border-color: #FFFFFF;">
+      </div>
+    </div>
+  </div>
+</section>
 
 <!--intro section --> 
 <section id="research" class="section intro" style="background-color: #EAF5F2;">
