--- a/index.html
+++ b/index.html
@@ -56,14 +56,8 @@
       <div class="col-md-7  col-md-offset-1 col-sm-6">
         <div class="intro-content">
           <p><h2>Welcome to Affective Shifting</h2></p>
-          <p>Affective shifting is a professional, unique, and data-driven tool for <b> improved goal attainment</b>.
-            It was developed by psychologists to improve an individuals' ability of <b>getting things done</b>.</p>
-          <p> Imagine experiencing a <b>profound sense of emotional control</b>, effortlessly maintaining a <b>positive and motivated state</b> even when faced with demanding or challenging tasks.
-            <b>Say goodbye</b> to the barriers of <b>procrastination, self-doubt, and other obstacles</b> that have held you back from realizing your full potential. 
-          With the <b>transformative power</b> of affective shifting you can surpass these limtation an <b>achieve your results with ease</b>. </p>
-          <p><b>Affective shifting</b> is a <b>cutting-edge</b> and <b>scientifically</b> proven tool, meticulously designed to help you <b>achieve your goals</b> and <b>enhance your overall well-being</b>.
-          By mastering this powerful technique, you can can <b>significantly improve your ability to follow through on your intentions</b> and take <b>decisive action</b> toward accomplishing your goals.
-          <b>Empower yourself</b> with the practice of affective shifting and <b>unlock</b> a whole new level of <b>personal sucess</b>. </p>
+          <p><b>Affective shifting</b> is a <b>scientifically proven, cutting-edge tool</b> that supports goal attainment. Developed by psychologists, it <b>enhances your ability to accomplish tasks effectively</b>. Experience a <b>profound sense of emotional control </b> and <b>effortlessly</b> maintain a <b>positive, motivated state</b> when facing demanding tasks. </p>
+          <p> Leave behind <b>procrastination, self-doubt, and other barriers</b> that impede your potential. With the <b>transformative power of affective shifting</b>, you can <b>surpass limitations</b> and <b>achieve results effortlessly</b>. Master the technique to improve <b>follow-through on intentions</b> and <b>take decisive action</b> toward your goals. <b>Empower yourself</b> with affective shifting and <b>unlock </b>a new level of <b>personal success</b>. </p>
         </div>
         
         <!-- intro --> 
