--- a/index.html
+++ b/index.html
@@ -197,6 +197,10 @@
   
 </footer>
 <!-- Footer section --> 
+<p>
+  <a href="privacy.html">Privacy Policy</a> |
+  <!-- Other footer links -->
+</p>
 
 <!-- JS files--> 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> 
