--- a/privacy.html
+++ b/privacy.html
@@ -88,7 +88,7 @@
 
   <h2>Contact Us:</h2>
 
-  <p>If you have any questions, concerns, or requests regarding this Policy or our privacy practices, please contact us at [contact information].</p>
+  <p>If you have any questions, concerns, or requests regarding this Policy or our privacy practices, please contact us at affectiveshifting@gmail.com.</p>
 
   <p>By using our Website, you acknowledge that you have read, understood, and appreciate the value we place on protecting your personal information and consent to the collection, use, and disclosure of your data as described in this Privacy Policy.</p>
   
