--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         <ul class="footer-share">
           <li><a href="#"><i class="fa fa-facebook"></i></a></li>
           <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-          <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/dr-kfriederichs707/?locale=en_US"><i class="fa fa-linkedin"></i></a></li>
           <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
         </ul>
       </div>
