--- a/index.html
+++ b/index.html
@@ -193,8 +193,21 @@
     </div>
   </div>
   <!-- Footer section --> 
+    <style>
+      /* Other CSS styles */
+      
+      footer {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+      
+      .privacy-link {
+        margin-left: auto;
+      }
+    </style>
 <p>
-  <a href="privacy.html">Privacy Policy</a> |
+  <a href="privacy.html">Privacy Policy</a>
   <!-- Other footer links -->
 </p>
   <!-- footer top --> 
