update privacy policy in new link

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
       }
     </style>
 <p>
-  <a href="privacy.html"target="_blank"></a>>Privacy Policy</a>
+  <a href="privacy.html" target="_blank">Privacy Policy</a>
   <!-- Other footer links -->
 </p>
   <!-- footer top --> 
