Update Prviacy Policy

--- a/privacy.html
+++ b/privacy.html
@@ -28,7 +28,7 @@
   
   <h2>At KM Friederichs Coaching, we value your privacy and are committed to protecting your personal information. We believe that every individual's data should be treated with the utmost respect and care. This Privacy Policy outlines how we collect, use, disclose, and protect your personal information when you use our website ("Website"). By accessing or using our Website, you consent to the terms of this Policy and the processing of your personal information as described herein.</h2>
 
-  <h2>Information We Collect:</h2>
+  <h2>1. Information We Collect:</h2>
 
   <h3>a. Personal Information:</h3>
   <p>We may collect personal information that you voluntarily provide to us when you interact with our Website, such as your name, email address, contact details, and any other information you choose to provide.</p>
@@ -39,7 +39,7 @@
   <h3>c. Usage Information:</h3>
   <p>We may collect information about how you use our Website, such as the pages you visit, the links you click, and the actions you take.</p>
 
-  <h2>Use of Information:</h2>
+  <h2>2. Use of Information:</h2>
 
   <h3>a. We use the information we collect to:</h3>
   <ul>
@@ -54,7 +54,7 @@
 
   <h3>b. We may use aggregated and anonymized information for statistical purposes and other legitimate business interests.</h3>
 
-  <h2>Information Sharing:</h2>
+  <h2>3. Information Sharing:</h2>
 
   <h3>a. We respect your privacy and do not sell, trade, or rent your personal information to third parties without your explicit consent, except as described in this Policy.</h3>
 
@@ -64,29 +64,40 @@
 
   <h3>d. In the event of a merger, acquisition, or sale of all or a portion of our assets, your information may be transferred to the acquiring entity while ensuring appropriate safeguards.</h3>
 
-  <h2>Data Security:</h2>
+  <h2>4. Data Security:</h2>
 
   <h3>a. We employ industry-standard security measures to protect your personal information from unauthorized access, disclosure, alteration, or destruction. However, please note that no method of transmission over the internet or electronic storage is 100% secure.</h3>
 
   <h3>b. It is essential that you keep your login credentials and password confidential, as you are responsible for maintaining the security of your account.</h3>
 
-  <h2>Third-Party Links:</h2>
+  <h2>3. Third-Party Links:</h2>
 
   <p>Our Website may contain links to third-party websites or services. Please note that this Policy does not apply to those websites or services, and we are not responsible for their privacy practices. We encourage you to review the privacy policies of those third parties before providing any personal information.</p>
 
-  <h2>Children's Privacy:</h2>
+  <h2>4. Children's Privacy:</h2>
 
-  <p>Protecting the privacy of children is crucial to us. Our Website is not intended for children under the age of 16. We do not knowingly collect personal information from children. If you believe that we may have inadvertently collected personal information from a child, please contact us, and we will promptly take steps to delete the information.</p>
+  <p>Protecting the privacy of children is crucial to us. Our Website is not intended for children under the age of 16. We do not knowingly collect personal information from children. We encourage parents and legal guardians to monitor their children’s Internet usage and to help enforce this Policy by instructing their children never to provide Personal Information through our Website or Service without their permission.
+    If you believe that we may have inadvertently collected personal information from a child, please contact us, and we will promptly take steps to delete the information.</p>
 
-  <h2>Your Rights:</h2>
+  <h2>5. Your Rights:</h2>
 
   <p>Under applicable data protection laws, you may have certain rights regarding your personal information, including the right to access, rectify, restrict processing, and delete your data. If you wish to exercise any of these rights, please contact us using the information provided below.</p>
 
-  <h2>Changes to this Policy:</h2>
+  <h2>6. Changes to this Policy:</h2>
 
   <p>We reserve the right to update or modify this Policy at any time. We will indicate the "Last Updated" date at the beginning of this Policy. Your continued use of our Website after any modifications to this Policy constitutes your acceptance of the revised Policy.</p>
 
-  <h2>Contact Us:</h2>
+  <h2>7. Disclaimer</h2>
+
+  <p>The information contained in this website is for general information purposes only. The information is provided by “affectiveshifting.com” and whilst we endeavour to keep the information up-to-date and correct, we make no representations or warranties of any kind, express or implied, about the completeness, accuracy, reliability, suitability or availability with respect to the website or the information, products, services, or related graphics contained on the website for any purpose. Any reliance you place on such information is therefore strictly at your own risk.
+
+    In no event will we be liable for any loss or damage including without limitation, indirect or consequential loss or damage, or any loss or damage whatsoever arising from loss of data or profits arising out of or in connection with the use of this website.
+    
+    Through this website you are able to link to other websites which are not under the control of “affectiveshifting.com”. We have no control over the nature, content and availability of those sites. The inclusion of any links does not necessarily imply a recommendation or endorse the views expressed within them.
+    
+    Every effort is made to keep the website up and running smoothly. However, “affectiveshifting.com” takes no responsibility for and will not be liable for the website being temporarily unavailable due to technical issues beyond our control.</p>
+
+  <h2>8. Contact Us:</h2>
 
   <p>If you have any questions, concerns, or requests regarding this Policy or our privacy practices, please contact us at affectiveshifting@gmail.com.</p>
 
